# desktop-app

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  winlauncher.py
.github/workflows/: build-and-release.yaml  release-vars.sh  release.yml  test-build.yml  windows.yml
desktop_app/: __init__.py  __main__.py  __version__.py  environment.py  fix_entry_points.py  launcher.py  linux.py  shell.py  windows.py
example/: setup.py
example/oink/: __main__.py  desktop-app.json
src/: wineventhook.cpp
winlauncher/: __init__.py  __main__.py  launcher.py  shell.py  utils.py  windows.py
