[metadata]
name = desktop-app
description = OS menu shortcuts, correct taskbar behaviour, and environment activation for Python GUI apps
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Billington
author_email = chrisjbillington@gmail.com
url = http://github.com/chrisjbillington/desktop-app
keywords = desktop windows launchers taskbar start-menu
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  setuptools_scm
  importlib_metadata
  distlib
  pywin32; sys_platform == 'win32'

[options.entry_points]
console_scripts =
  desktop-app = desktop_app.__main__:main
